# QtQuick-CarSpeedometer

./: .gitignore  CMakeLists.txt  README.md  qml.qrc
include/: Car.h  CarModel.h  Engine.h  Indicator.h  Speedometer.h  constants.h
qml/: main.qml
src/: Car.cpp  CarModel.cpp  Engine.cpp  Indicator.cpp  Speedometer.cpp  main.cpp
